--- a/src/state_estimation/cfg/kalman_config.yaml
+++ b/src/state_estimation/cfg/kalman_config.yaml
@@ -130,7 +130,7 @@ twist0: estimators/twist
 twist0_config: [false, false, false,
                 false, false, false,
                 true,  true,  true,
-                true, true, true,
+                false, false, false,
                 false, false, false]
 twist0_queue_size: 3
 twist0_rejection_threshold: 2
