--- a/src/state_estimation/cfg/navsat_transform_config.yaml
+++ b/src/state_estimation/cfg/navsat_transform_config.yaml
@@ -11,21 +11,21 @@ delay: 3.0
 
 # If your IMU does not account for magnetic declination, enter the value for your location here. If you don't know it,
 # see http://www.ngdc.noaa.gov/geomag-web/ (make sure to convert the value to radians). This parameter is mandatory.
-magnetic_declination_radians: 0
+magnetic_declination_radians: 0.2
 
 # Your IMU's yaw, once the magentic_declination_radians value is added to it, should report 0 when facing east. If it
 # doesn't, enter the offset here. Defaults to 0.
-yaw_offset: 0.0
+yaw_offset: 0
 
 # If this is true, the altitude is set to 0 in the output odometry message. Defaults to false.
-zero_altitude: false
+zero_altitude: true
 
 # If this is true, the transform world_frame->utm transform is broadcast for use by other nodes. Defaults to false.
-broadcast_utm_transform: false
+broadcast_cartesian_transform: false
 
 # If this is true, the utm->world_frame transform will be published instead of the world_frame->utm transform. 
 # Note that broadcast_utm_transform still has to be enabled. Defaults to false.
-broadcast_utm_transform_as_parent_frame: false
+broadcast_cartesian_transform_as_parent_frame: false
 
 # If this is true, all received odometry data is converted back to a lat/lon and published as a NavSatFix message as
 # /gps/filtered. Defaults to false.
@@ -44,4 +44,4 @@ wait_for_datum: false
 # Instead of using the first GPS location and IMU-based heading for the local-frame origin, users can specify the
 # origin (datum) using this parameter. The fields in the parameter represent latitude and longitude in decimal degrees,
 # and heading in radians. As navsat_transform_node assumes an ENU standard, a 0 heading corresponds to east.
-datum: [55.944904, -3.186693, 0.0]
+datum: [34.156113, -118.131943, 0]
