Removed ned2enu node

--- a/src/state_estimation/cfg/kalman_global_config.yaml
+++ b/src/state_estimation/cfg/kalman_global_config.yaml
@@ -123,7 +123,7 @@ twist0_config: [false, false, false,
 
 
 # IMU data
-imu0: sensors/IMU_ENU
+imu0: sensors/IMU
 imu0_config: [false, false, false,
               false,  false,  true,
               false, false, false,
