--- a/src/state_estimation/cfg/kalman_local_config.yaml
+++ b/src/state_estimation/cfg/kalman_local_config.yaml
@@ -97,7 +97,7 @@ twist0_config: [false, false, false,
 # twist1_differential: true
 
 # IMU data
-imu0: sensors/IMU_ENU
+imu0: sensors/IMU
 imu0_config: [false, false, false,
               false,  false,  true,
               false, false, false,
